--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
   --clr-primary-400: hsl(233, 47%, 7%);
   --clr-primary-300: hsl(244, 38%, 16%);
   --clr-primary-200: hsl(277, 64%, 61%);
+  --clr-primary-100: hsla(277, 64%, 61%, 0.286);
   --clr-neutral-400: hsl(0, 0%, 100%);
   --clr-neutral-300: hsla(0, 0%, 100%, 0.75);
   --clr-neutral-200: hsla(0, 0%, 100%, 0.6);
@@ -41,6 +42,19 @@ body {
   overflow: hidden;
   border-radius: 12px;
   background-color: var(--clr-primary-300);
+}
+
+.card__image {
+  position: relative;
+}
+
+.card__image .layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--clr-primary-100);
 }
 
 .card__image img {
